<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>grupo5</groupId>
    <artifactId>donatrack</artifactId>
    <version>1.0</version>
    <packaging>pom</packaging>

    <name>donatrack</name>
    <url>https://github.com/tsorren/DonaTrack-TP-DDS</url>
    <modules>
        <module>common-lib</module>
        <module>donaciones-service</module>
        <module>notificaciones-service</module>
        <module>incentivos-service</module>
        <module>integration-tests</module>
    </modules>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <spring.boot.maven.plugin.version>4.0.7</spring.boot.maven.plugin.version>
        <spring.boot.dependencies.version>4.0.7</spring.boot.dependencies.version>
        <spring.cloud-version>2025.1.1</spring.cloud-version>
        <lombok.version>1.18.46</lombok.version>

        <springdoc-openapi.version>2.8.5</springdoc-openapi.version>

        <spotless.version>3.6.0</spotless.version>
        <jacoco.version>0.8.14</jacoco.version>
        <plantuml-generator.version>3.0.1</plantuml-generator.version>
        <sonar.version>5.7.0.6970</sonar.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring.boot.dependencies.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.maven.plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.sonarsource.scanner.maven</groupId>
                    <artifactId>sonar-maven-plugin</artifactId>
                    <version>${sonar.version}</version>
                </plugin>
                <plugin>
                    <groupId>de.elnarion.maven</groupId>
                    <artifactId>plantuml-generator-maven-plugin</artifactId>
                    <version>${plantuml-generator.version}</version>
                    <executions>
                        <execution>
                            <id>generate-plantuml</id>
                            <phase>test</phase>
                            <goals>
                                <goal>generate</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${project.build.directory}</outputDirectory>
                                <outputFilename>modelo_tecnico.puml</outputFilename>
                                <scanPackages>
                                    <scanPackage>grupo5</scanPackage>
                                </scanPackages>
                                <hideFields>false</hideFields>
                                <hideMethods>false</hideMethods>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                    <parameters>true</parameters>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <googleJavaFormat>
                            <version>1.17.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <phase>compile</phase>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>de.elnarion.maven</groupId>
                <artifactId>plantuml-generator-maven-plugin</artifactId>
                <version>${plantuml-generator.version}</version>
                <executions>
                    <execution>
                        <id>generate-plantuml</id>
                        <phase>test</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                            <outputFilename>modelo_tecnico.puml</outputFilename>
                            <scanPackages>
                                <scanPackage>grupo5</scanPackage>
                            </scanPackages>
                            <hideFields>false</hideFields>
                            <hideMethods>false</hideMethods>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>